增加多种监控方式
1.提高监控频率
2.增加低价监控
3.生成html